--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -10,33 +10,18 @@
     <link th:href="@{css/style.css}" rel="stylesheet" />
     <link th:href="@{css/fire.css}" rel="stylesheet" />
 </head>
-<body style="background-color: #0f1014;">
+<body class="">
         		<div th:replace="_nav-components :: nav">...</div>
+        		
+<div class="bg-image"></div>
+
+<div class="bg-text">
+  <h1 style="font-style: oblique;">DjeTay'infos</h1>
+  <h3>&Agrave; la recherche du spécialiste !</h3>
+</div>        		
 
 
-<!-- <div class="cont"> -->
-<!-- <video src="vid/fire.mp4" autoplay muted></video> -->
-<video style="" class="vvideo" id="myVideo" src="vid/fire.mp4" autoplay muted ></video>
-<!-- <video class="vvideo" id="myVideo" src="vid/nelheart2.mp4" autoplay muted loop></video> -->
 
- <div class="text glow">
-  
-    <span>D</span>
-    <span>j</span>
-    <span>e</span>
-    <span>T</span>
-    <span>a</span>
-    <span>y</span>
-    <span>'</span>
-    <span>I</span>
-    <span>n</span>
-    <span>f</span>
-    <span>o</span>
-    <span>s</span>
-     
-  </div>
-  
-<!-- </div> -->
 
 
 	<script type="text/javascript" th:src="@{/js/test.js}"></script>
