--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -5,6 +5,54 @@ th, td {
 /* text-align: center; */
 /* font-weight: bold; */
 }
+body, html {
+  height: 100%;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+.bg-image {
+  /* The image used */
+	background-image: url('../img/homebackg.jpg');
+
+  /* Add the blur effect */
+/*   filter: blur(8px); */
+/*   -webkit-filter: blur(8px); */
+
+  /* Full height */
+  height: 100%;
+
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+/* Position text in the middle of the page/image */
+.bg-text {
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0, 0.4); /* Black w/opacity/see-through */
+  color: white;
+  font-weight: bold;
+  border: 2px solid gold;
+  position: absolute;
+  top: 30%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 2;
+/*   width: 80%; */
+  padding: 20px;
+  text-align: center;
+}
+
+.backg {
+/* 	background-color: black; */
+	background-image: url('../img/homebackg.jpg');
+	background-size: cover;
+	background-repeat: no-repeat;
+}
 
 div{
 	
